# xiaozhi

./: README.md  admins-db.json  history-db.json  index.html  machines-db.json  metadata.json  package-lock.json  plan-db.json  server.ts  supabase-setup.sql
Desktop/ESP32 Wroom/: .gitignore  MIC_TEST_GUIDE.md  PINOUT.md  rules.md
Desktop/ESP32 Wroom/test_mic_oled_project/: .gitignore  README.md  sdkconfig.defaults
Desktop/ESP32 Wroom/test_mic_oled_project/main/: test_mic_oled.cc
Desktop/ESP32 Wroom/test_mic_project/: .gitignore  CMakeLists.txt  README.md  build_and_flash.bat  do_build_flash_com6.bat  monitor_com6.bat  quick_build.bat  quick_flash.bat  quick_test.py  sdkconfig.defaults  test_mic_capture.py  test_mic_dtr_test.py  test_mic_serial.py  test_mic_short.py
Desktop/ESP32 Wroom/test_mic_project/main/: CMakeLists.txt  test_mic.cc
Desktop/ESP32 Wroom/test_oled_project/: .gitignore  CMakeLists.txt  README.md  build_and_flash.bat  out_a.txt  rebuild.bat  sdkconfig.defaults  send_a.py
Desktop/ESP32 Wroom/test_oled_project/main/: CMakeLists.txt  test_oled.cc
Desktop/ESP32 Wroom/test_speaker_project/: .gitignore  CMakeLists.txt  README.md  build_and_flash.bat  do_build_flash_com6.bat  rebuild.bat  sdkconfig.defaults
Desktop/ESP32 Wroom/test_speaker_project/main/: CMakeLists.txt  test_speaker.cc
Desktop/ESP32 Wroom/test_web_audio_oled_project/: .gitignore  CMakeLists.txt  README.md  _flash_run.ps1  do_build.bat  rebuild.bat  sdkconfig.defaults
Desktop/ESP32 Wroom/test_web_audio_oled_project/components/web/: index.html
Desktop/ESP32 Wroom/test_web_audio_oled_project/main/: CMakeLists.txt  test_web_audio_oled.cc
Desktop/ESP32 Wroom/xiaozhi_like/: %LOG%  .gitignore  AUDIT_LOG.md  CMakeLists.txt  FIX_MILESTONE.md  PHASE_STATUS.json  README.md  STATE.md  VERSION_1.0.md  VERSION_1.1.md  audit.ps1  do_flash_com6.bat  do_monitor_com6.bat  do_p2_4_build.bat  do_p2_4d_app.bat  do_p2_4d_boot.bat  do_p2_4d_build.bat  do_p2_4e_build_app.bat  do_p4_1_build.bat  do_quick_build_flash.bat  read_loop_log.py  read_serial_test.py  sdkconfig.defaults
Desktop/ESP32 Wroom/xiaozhi_like/main/: CMakeLists.txt  main.cc  ota_update.cc  ota_update.h  wake_word.cc  websocket_client.cc  wifi_manager.cc  wifi_manager.h
Desktop/ESP32 Wroom/xiaozhi_like/main/audio/: audio_codec.cc  audio_codec.h  esp32s3_audio_codec.cc  esp32s3_audio_codec.h
Desktop/ESP32 Wroom/xiaozhi_like/main/boards/esp32s3-wroom-1/: config.h  config.json  esp32s3_wroom1_board.cc  esp32s3_wroom1_board.h  ssd1306.cc  ssd1306.h
Desktop/ESP32 Wroom/xiaozhi_like/partitions/v2/: 4m.csv
Desktop/ESP32 Wroom/xiaozhi_like/server/: Dockerfile  __init__.py  ai_handler.py  config.py  loopback_test.py  main.py  requirements.txt  tts_handler.py
Desktop/ESP32 Wroom/xiaozhi_like/server/asr/: __init__.py  silero.py  whisper.py
Desktop/ESP32 Wroom/xiaozhi_like/server/llm/: __init__.py  anthropic_llm.py  ollama.py  openai_llm.py
Desktop/ESP32 Wroom/xiaozhi_like/server/tts/: __init__.py  coqui_tts.py  edge_tts.py  sillytavern_tts.py
Desktop/xiaozhi_server/: ai_handler.py  app.py
src/: App.tsx  types.ts
src/components/: AdminPanel.tsx  DailyHistoryLog.tsx  DataExtractor.tsx  MachineGrid.tsx  ShiftPlanner.tsx
src/context/: AuthContext.tsx  PositionLabelsContext.tsx
src/lib/: supabase.ts
