# main/CMakeLists.txt - P4.1
idf_component_register(
    SRCS 
        "main.cc"
        "wifi_manager.cc"
        "ota_update.cc"
        "boards/esp32s3-wroom-1/esp32s3_wroom1_board.cc"
        "boards/esp32s3-wroom-1/ssd1306.cc"
        "audio/audio_codec.cc"
        "audio/esp32s3_audio_codec.cc"
    INCLUDE_DIRS 
        "."
        "boards/esp32s3-wroom-1"
        "audio"
    REQUIRES 
        "driver"
        "esp_lcd"
        "esp_timer"
        "nvs_flash"
        "freertos"
        "esp_event"
        "esp_wifi"
        "esp_netif"
        "esp_https_ota"
        "esp_http_client"
)