# main/CMakeLists.txt - P8 Full Voice Assistant
idf_component_register(
    SRCS 
        "main.cc"
        "wifi_manager.cc"
        "ota_update.cc"
        "wifi_scan.cc"
        "wake_word.cc"
        "websocket_client.cc"
        "stream_player.cc"
        "audio_stream.cc"
        "boards/esp32s3-wroom-1/esp32s3_wroom1_board.cc"
        "boards/esp32s3-wroom-1/ssd1306.cc"
        "audio/audio_codec.cc"
        "audio/esp32s3_audio_codec.cc"
    INCLUDE_DIRS 
        "."
        "boards/esp32s3-wroom-1"
        "audio"
    REQUIRES 
        "driver"
        "esp_lcd"
        "esp_timer"
        "nvs_flash"
        "freertos"
        "esp_event"
        "esp_wifi"
        "esp_netif"
        "esp_https_ota"
        "esp_http_client"
        "esp_websocket_client"
        "app_update"
)
