# main/CMakeLists.txt - P8 Full Voice Assistant
idf_component_register(
    SRCS 
        "main.cc"
        "protocols/wifi_manager.cc"
        "system/ota_update.cc"
        "protocols/wifi_scan.cc"
        "services/wake_word.cc"
        "protocols/websocket_client.cc"
        "audio/stream_player.cc"
        "audio/audio_stream.cc"
        "audio/background_player.cc"
        "boards/esp32s3-wroom-1/esp32s3_wroom1_board.cc"
        "boards/esp32s3-wroom-1/ssd1306.cc"
        "audio/audio_codec.cc"
        "audio/esp32s3_audio_codec.cc"
    INCLUDE_DIRS 
        "."
        "boards/esp32s3-wroom-1"
        "audio"
        "protocols"
        "services"
        "system"
        "display"
    REQUIRES 
        "driver"
        "esp_lcd"
        "esp_timer"
        "nvs_flash"
        "freertos"
        "esp_event"
        "esp_wifi"
        "esp_netif"
        "esp_https_ota"
        "esp_http_client"
        "esp_websocket_client"
        "app_update"
)
